--- a/OmniMarket.UI/Views/Users/Login.cshtml
+++ b/OmniMarket.UI/Views/Users/Login.cshtml
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="login-box">
         <div class="illustration">
-            <img src="~/images/login-robot.png" alt="شخصیت ربات برای ورود">
+            <img src="~/images/2206.q713.011.F.m012.c7.people top view flat.jpg" alt="شخصیت ربات برای ورود">
         </div>
         <div class="form-content">
             <h1>خوش آمدید!</h1>
