--- a/OmniMarket.Admin/Views/Shared/_sidebar.cshtml
+++ b/OmniMarket.Admin/Views/Shared/_sidebar.cshtml
@@ -16,6 +16,7 @@
                   <ul class="nav flex-column sub-menu">
                       <li class="nav-item"> <a class="nav-link" href="#"> Login </a></li>
                       <li class="nav-item"> <a class="nav-link" href="#"> Register </a></li>
+                      <li class="nav-item"> <a class="nav-link" href="#"> Users </a></li>
                   </ul>
               </div>
           </li>
