change name models  be viewmodels

--- a/OmniMarket.UI/Views/Products/Create.cshtml
+++ b/OmniMarket.UI/Views/Products/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@* OmniMarket.UI/Views/Products/Create.cshtml *@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model OmniMarket.Web.Models.Product.CreateProductViewModel
+@using OmniMarket.Web.ViewModels.Product
+@model CreateProductViewModel
 
 @{
     ViewData["Title"] = "ایجاد محصول جدید";
