--- a/OmniMarket.UI/Views/Products/Details.cshtml
+++ b/OmniMarket.UI/Views/Products/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@* OmniMarket.UI/Views/Products/Details.cshtml *@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model OmniMarket.Web.Models.Product.ProductViewModel
+@using OmniMarket.Web.ViewModels.Product
+@model ProductViewModel
 
 @{
     ViewData["Title"] = "جزئیات محصول";
