--- a/OmniMarket.UI/Views/Products/Edit.cshtml
+++ b/OmniMarket.UI/Views/Products/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@* OmniMarket.UI/Views/Products/Edit.cshtml *@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model OmniMarket.Web.Models.Product.UpdateProductViewModel
+@using OmniMarket.Web.ViewModels.Product
+@model UpdateProductViewModel
 
 @{
     ViewData["Title"] = "ویرایش محصول";
