--- a/OmniMarket.UI/Views/Products/Index.cshtml
+++ b/OmniMarket.UI/Views/Products/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@* OmniMarket.UI/Views/Products/Index.cshtml *@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model List<OmniMarket.Web.Models.Product.ProductViewModel>
+@using OmniMarket.Web.ViewModels.Product
+@model List<ProductViewModel>
 
 @{
     ViewData["Title"] = "لیست محصولات";
