--- a/OmniMarket.UI/Views/Users/Login.cshtml
+++ b/OmniMarket.UI/Views/Users/Login.cshtml
@@ -1,4 +1,5 @@
-﻿ @model OmniMarket.Web.Models.LoginViewModel
+﻿@using OmniMarket.Web.ViewModels
+ @model LoginViewModel
  
 @{
     ViewData["Title"] = "Login";
