--- a/OmniMarket.UI/Views/Users/Register.cshtml
+++ b/OmniMarket.UI/Views/Users/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model OmniMarket.Web.Models.RegisterViewModel
+﻿@using OmniMarket.Web.ViewModels
+@model RegisterViewModel
 
 @{
     ViewData["Title"] = "ثبت‌نام";
