--- a/OmniMarket.UI/Views/_ViewImports.cshtml
+++ b/OmniMarket.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using OmniMarket.Web
-@using OmniMarket.Web.Models
+@using OmniMarket.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
